fix: change wording, remove unecessary scrollbars

--- a/client/src/stylesheets/sologame/_index.scss
+++ b/client/src/stylesheets/sologame/_index.scss
@@ -3,7 +3,7 @@
 .cell {
   background-color: rgba(255, 255, 255, 0.025);
   border-radius: 0.25rem;
-  overflow: scroll;
+  overflow: auto;
   margin: 0.5rem;
   padding: 0.5rem;
 }
